@@ -8,7 +8,7 @@
 
 INCLUDE scripts/ports
 
-#EXEC ./ctl.sh restart -D h2 >/dev/null
+EXEC ./ctl.sh restart -D h2 >/dev/null
 
 CLIENT 2
 
@@ -40,6 +40,6 @@ _WAIT
 
 END
 
-#BLOCK FINALLY
-#_EXEC ./ctl.sh restart 2>/dev/null 1>/dev/null
-#END
+BLOCK FINALLY
+_EXEC ./ctl.sh restart 2>/dev/null 1>/dev/null
+END
